--- a/mitsuha-core/Cargo.toml
+++ b/mitsuha-core/Cargo.toml
@@ -6,3 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# Musubi dependencies
+musubi_api = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
+
+thiserror = "1.0.37"
+anyhow = "1.0.66"
+serde = "1.0.148"
+serde_json = "1.0.89"
+async-trait = "0.1.59"
+config = "0.13.2"
+reqwest = { version = "0.11.13", features = ["blocking"] }
+redis = "0.22.1"
