--- a/mitsuha-core/Cargo.toml
+++ b/mitsuha-core/Cargo.toml
@@ -17,3 +17,5 @@ async-trait = "0.1.59"
 config = "0.13.2"
 reqwest = { version = "0.11.13", features = ["blocking"] }
 redis = "0.22.1"
+futures = "0.3"
+tokio = { version = "1.24.1", features = ["full"] }
