fix(mwr): Fix wasmtime runtime issues

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,6 @@
 members = [
     "mitsuha-core",
     "mitsuha-runtime",
-    "mitsuha-wasm-runtime"
+    "mitsuha-wasm-runtime",
+    "mitsuha-storage"
 ]
