--- a/mitsuha-storage/Cargo.toml
+++ b/mitsuha-storage/Cargo.toml
@@ -15,4 +15,5 @@ anyhow = "1.0.66"
 chrono = "0.4.23"
 serde = "1.0.148"
 serde_json = "1.0.89"
+dashmap = "5.4.0"
 tokio = { version = "1.24.1", features = ["full"] }
