--- a/mitsuha-storage/Cargo.toml
+++ b/mitsuha-storage/Cargo.toml
@@ -17,3 +17,11 @@ serde = "1.0.148"
 serde_json = "1.0.89"
 dashmap = "5.4.0"
 tokio = { version = "1.24.1", features = ["full"] }
+
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
+rand = "0.8.5"
+
+[[bench]]
+name = "memory_storage"
+harness = false
