--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@ members = [
     "mitsuha-core",
     "mitsuha-runtime",
     "mitsuha-wasm-runtime",
-    "mitsuha-storage"
+    "mitsuha-storage",
+    "mitsuha-channel"
 ]
