--- a/mitsuha-core/Cargo.toml
+++ b/mitsuha-core/Cargo.toml
@@ -20,3 +20,5 @@ reqwest = { version = "0.11.13", features = ["blocking"] }
 redis = "0.22.1"
 futures = "0.3"
 tokio = { version = "1.24.1", features = ["full"] }
+strum_macros = "0.24.3"
+strum = "0.24"
