--- a/mitsuha-channel/Cargo.toml
+++ b/mitsuha-channel/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2021"
 [dependencies]
 mitsuha-core = { path = "../mitsuha-core" }
 mitsuha-storage = { path = "../mitsuha-storage" }
+mitsuha-wasm-runtime = { path = "../mitsuha-wasm-runtime" }
 
 dashmap = "5.4.0"
 tokio = { version = "1.24.1", features = ["full"] }
 rand = "0.8.5"
 async-trait = "0.1.59"
+chrono = "0.4.23"
+wasmtime = { version = "3.0.1", features = ["async"] }
