--- a/mitsuha-core/Cargo.toml
+++ b/mitsuha-core/Cargo.toml
@@ -22,3 +22,5 @@ futures = "0.3"
 tokio = { version = "1.24.1", features = ["full"] }
 strum_macros = "0.24.3"
 strum = "0.24"
+dashmap = "5.4.0"
+chrono = { version = "0.4.23", features = ["serde"] }
