--- a/mitsuha-core/Cargo.toml
+++ b/mitsuha-core/Cargo.toml
@@ -24,3 +24,4 @@ strum_macros = "0.24.3"
 strum = "0.24"
 dashmap = "5.4.0"
 chrono = { version = "0.4.23", features = ["serde"] }
+lazy_static = "1.4.0"
