--- a/mitsuha-wasm-runtime/Cargo.toml
+++ b/mitsuha-wasm-runtime/Cargo.toml
@@ -26,3 +26,4 @@ tokio = { version = "1.24.1", features = ["full"] }
 strum_macros = "0.24.3"
 strum = "0.24"
 futures = "0.3"
+moka = { version = "0.11", features = ["future"] }
