--- a/mitsuha-channel/Cargo.toml
+++ b/mitsuha-channel/Cargo.toml
@@ -19,8 +19,8 @@ wasmtime = { version = "3.0.1", features = ["async"] }
 
 [dev-dependencies]
 # Musubi dependencies
-musubi_api = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
-musubi_wasmtime = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
+musubi_api = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "master" }
+musubi_wasmtime = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "master" }
 criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
 
 
