--- a/mitsuha-wasm-runtime/Cargo.toml
+++ b/mitsuha-wasm-runtime/Cargo.toml
@@ -10,8 +10,8 @@ mitsuha-core = { path = "../mitsuha-core" }
 mitsuha-storage = { path = "../mitsuha-storage" }
 
 # Musubi dependencies
-musubi_api = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
-musubi_wasmtime = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
+musubi_api = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "master" }
+musubi_wasmtime = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "master" }
 
 lazy_static = "1.4.0"
 reqwest = { version = "0.11.13", features = ["blocking"] }
