--- a/mitsuha-channel/Cargo.toml
+++ b/mitsuha-channel/Cargo.toml
@@ -16,13 +16,14 @@ rand = "0.8.5"
 async-trait = "0.1.59"
 chrono = "0.4.23"
 wasmtime = { version = "3.0.1", features = ["async"] }
+log = "0.4.19"
 
 [dev-dependencies]
 # Musubi dependencies
 musubi_api = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "master" }
 musubi_wasmtime = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "master" }
 criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
-
+env_logger = "0.10.0"
 
 [[bench]]
 name = "wasmtime"
