--- a/mitsuha-core/Cargo.toml
+++ b/mitsuha-core/Cargo.toml
@@ -25,3 +25,5 @@ strum = "0.24"
 dashmap = "5.4.0"
 chrono = { version = "0.4.23", features = ["serde"] }
 lazy_static = "1.4.0"
+log4rs = { version = "1.2.0" }
+log = "0.4.19"
