--- a/mitsuha-channel/Cargo.toml
+++ b/mitsuha-channel/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+musubi_api = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "master" }
+
 mitsuha-core = { path = "../mitsuha-core" }
 mitsuha-storage = { path = "../mitsuha-storage" }
 mitsuha-wasm-runtime = { path = "../mitsuha-wasm-runtime" }
@@ -17,6 +19,8 @@ async-trait = "0.1.59"
 chrono = "0.4.23"
 wasmtime = { version = "3.0.1", features = ["async"] }
 log = "0.4.19"
+anyhow = "1.0.66"
+
 
 [dev-dependencies]
 # Musubi dependencies
