--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
     "mitsuha-runtime",
     "mitsuha-wasm-runtime",
     "mitsuha-storage",
-    "mitsuha-channel"
+    "mitsuha-channel",
+    "mitsuha-qflow"
 ]
