--- a/mitsuha-channel/Cargo.toml
+++ b/mitsuha-channel/Cargo.toml
@@ -11,6 +11,7 @@ musubi_api = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "maste
 mitsuha-core = { path = "../mitsuha-core" }
 mitsuha-storage = { path = "../mitsuha-storage" }
 mitsuha-wasm-runtime = { path = "../mitsuha-wasm-runtime" }
+mitsuha-qflow = { path = "../mitsuha-qflow" }
 
 dashmap = "5.4.0"
 tokio = { version = "1.24.1", features = ["full"] }
