--- a/mitsuha-runtime/Cargo.toml
+++ b/mitsuha-runtime/Cargo.toml
@@ -12,6 +12,7 @@ mitsuha-core = { path = "../mitsuha-core" }
 mitsuha-storage = { path = "../mitsuha-storage" }
 mitsuha-channel = { path = "../mitsuha-channel" }
 mitsuha-wasm-runtime = { path = "../mitsuha-wasm-runtime" }
+mitsuha-qflow = { path = "../mitsuha-qflow" }
 
 tonic = "0.9.2"
 tonic-reflection = "0.9.2"
