--- a/mitsuha-runtime-test/mitsuha-wasm-echo/Cargo.toml
+++ b/mitsuha-runtime-test/mitsuha-wasm-echo/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 # Musubi dependencies
-musubi_api = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "master" }
-musubi_bindings = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "master" }
-mitsuha_bindings = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "master" }
+musubi_api = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
+musubi_bindings = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
+mitsuha_bindings = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
