--- a/mitsuha-channel/Cargo.toml
+++ b/mitsuha-channel/Cargo.toml
@@ -19,10 +19,10 @@ rand = "0.8.5"
 async-trait = "0.1.59"
 chrono = "0.4.23"
 wasmtime = { version = "12.0.0", features = ["async"] }
-log = "0.4.19"
 anyhow = "1.0.66"
 futures = "0.3.28"
 lazy_static = "1.4.0"
+tracing = "0.1.37"
 
 
 [dev-dependencies]
