--- a/mitsuha-runtime-rpc/Cargo.toml
+++ b/mitsuha-runtime-rpc/Cargo.toml
@@ -14,7 +14,6 @@ tonic-health = "0.9.2"
 prost = "0.11.9"
 prost-types = "0.11.9"
 anyhow = "1.0.66"
-log = "0.4.19"
 chrono = "0.4.23"
 env_logger = "0.10.0"
 tokio = { version = "1.24.1", features = ["full"] }
@@ -22,6 +21,7 @@ async-trait = "0.1.59"
 serde = "1.0.148"
 serde_json = "1.0.89"
 lazy_static = "1.4.0"
+tracing = "0.1.37"
 
 
 
