--- a/mitsuha-runtime/Cargo.toml
+++ b/mitsuha-runtime/Cargo.toml
@@ -21,7 +21,6 @@ tonic-health = "0.9.2"
 prost = "0.11.9"
 prost-types = "0.11.9"
 anyhow = "1.0.66"
-log = "0.4.19"
 chrono = "0.4.23"
 env_logger = "0.10.0"
 tokio = { version = "1.24.1", features = ["full"] }
@@ -30,6 +29,9 @@ serde = "1.0.148"
 serde_json = "1.0.89"
 lazy_static = "1.4.0"
 dotenv = "0.15.0"
+tracing = "0.1.37"
+tracing-log = "0.1.3"
+tracing-subscriber = "0.3.17"
 
 
 
