--- a/mitsuha-channel/Cargo.toml
+++ b/mitsuha-channel/Cargo.toml
@@ -12,6 +12,7 @@ mitsuha-core = { path = "../mitsuha-core" }
 mitsuha-storage = { path = "../mitsuha-storage" }
 mitsuha-wasm-runtime = { path = "../mitsuha-wasm-runtime" }
 mitsuha-qflow = { path = "../mitsuha-qflow" }
+mitsuha-runtime-rpc = { path = "../mitsuha-runtime-rpc" }
 
 dashmap = "5.4.0"
 tokio = { version = "1.24.1", features = ["full"] }
@@ -23,6 +24,9 @@ anyhow = "1.0.66"
 futures = "0.3.28"
 lazy_static = "1.4.0"
 tracing = "0.1.37"
+tonic = "0.9.2"
+tonic-reflection = "0.9.2"
+tonic-health = "0.9.2"
 
 
 [dev-dependencies]
