--- a/mitsuha-qflow/Cargo.toml
+++ b/mitsuha-qflow/Cargo.toml
@@ -25,6 +25,10 @@ serde_json = "1.0.89"
 lazy_static = "1.4.0"
 tikv-client = "0.2.0"
 rand = "0.8.5"
+tracing = "0.1.37"
+strum_macros = "0.24.3"
+strum = "0.24"
+
 
 [dev-dependencies]
 uuid = { version = "1.2.2", features = ["v4"] }
