--- a/mitsuha-runtime/Cargo.toml
+++ b/mitsuha-runtime/Cargo.toml
@@ -32,7 +32,11 @@ dotenv = "0.15.0"
 tracing = "0.1.37"
 tracing-log = "0.1.3"
 tracing-subscriber = "0.3.17"
-
+opentelemetry = { version = "0.20", features = ["rt-tokio"] }
+opentelemetry-stdout = { version = "0.1.0", features = ["trace"] }
+tracing-opentelemetry = "0.21"
+opentelemetry-otlp = "0.13.0"
+opentelemetry-semantic-conventions = "0.12.0"
 
 
 [build-dependencies]
