--- a/mitsuha-channel/Cargo.toml
+++ b/mitsuha-channel/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 musubi_api = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
+mitsuha_core_types = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
 
 mitsuha-core = { path = "../mitsuha-core" }
 mitsuha-storage = { path = "../mitsuha-storage" }
