--- a/mitsuha-core/Cargo.toml
+++ b/mitsuha-core/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+mitsuha_core_types = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
+
 # Musubi dependencies
 musubi_api = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
 
