--- a/mitsuha-qflow/Cargo.toml
+++ b/mitsuha-qflow/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 musubi_api = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
 
+mitsuha_core_types = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
 mitsuha-core = { path = "../mitsuha-core" }
 
 tonic = "0.9.2"
