--- a/mitsuha-runtime-rpc/Cargo.toml
+++ b/mitsuha-runtime-rpc/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-mitsuha-core = { path = "../mitsuha-core" }
+mitsuha_core_types = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
 
 tonic = "0.9.2"
 tonic-reflection = "0.9.2"
