--- a/mitsuha-wasm-runtime/Cargo.toml
+++ b/mitsuha-wasm-runtime/Cargo.toml
@@ -10,6 +10,7 @@ mitsuha-core = { path = "../mitsuha-core" }
 mitsuha-storage = { path = "../mitsuha-storage" }
 
 # Musubi dependencies
+mitsuha_core_types = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
 musubi_api = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
 musubi_wasmtime = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
 
